[project]
name = "Schedsim3"
version = "1.0.0"
description = "An updated version of Schedsim developed by HEAPLab polimi"
requires-python = ">=3.12.5"

dependencies = [
    "Flask==3.0.3",
    "matplotlib==3.9.2",
    "pandas==2.2.2"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
